tests/error/comprehension_errors/guarded3.err
Guppy compilation failed. Error in file $FILE:24

22:    @guppy(module)
23:    def foo(qs: list[MyStruct] @owned) -> list[qubit]:
24:        return [s.q2 for s in qs if bar(s.q1)]
                            ^
GuppyTypeError: Field `s.q2` with linear type `qubit` is not used on all control-flow paths of the list comprehension
